--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_audio_sens_settings">AudioSensSettings</string>
+    <string name="title_activity_audio_sens_time_settings">AudioSensTimeSettingsActivity</string>
 
 </resources>
